# arepa

./: CMakeLists.txt  README.md
include/: lexer.h  parser.h  token.h
src/: lexer.c  parser.c  token.c
test/: runner.c
